[gd_scene load_steps=31 format=3 uid="uid://dc2uygkwfcu8w"]

[ext_resource type="Script" uid="uid://coxexhi2gki7i" path="res://Scripts/baddieYellow.gd" id="1_b0c5b"]
[ext_resource type="Texture2D" uid="uid://dd1bx8j5cmldn" path="res://Assets/Atk_box.png" id="2_d082v"]
[ext_resource type="Texture2D" uid="uid://cs10i7jkjjwbd" path="res://Assets/Atk_box copie.png" id="3_7gbtx"]
[ext_resource type="Texture2D" uid="uid://b4n37wvhjhguh" path="res://Assets/perso_final copie.png" id="4_nd58f"]
[ext_resource type="Texture2D" uid="uid://cghan0t2i044u" path="res://Assets/yellow1.png" id="6_d082v"]
[ext_resource type="Texture2D" uid="uid://jy4pukda083b" path="res://Assets/yellow2.png" id="7_7gbtx"]
[ext_resource type="Texture2D" uid="uid://33v312kgomtn" path="res://Assets/perso_final copie 2.png" id="7_7kl0n"]
[ext_resource type="Texture2D" uid="uid://bv1qy2v382wd6" path="res://Assets/idle-r.png" id="7_p42id"]
[ext_resource type="Texture2D" uid="uid://cw5w3m5yxvgyl" path="res://Assets/perso_final.png" id="8_rvhxl"]
[ext_resource type="Texture2D" uid="uid://2fwvbonmu2vc" path="res://Assets/perso_chroma_requiem (55) copie 4.png" id="9_rh60s"]
[ext_resource type="Texture2D" uid="uid://euqvvc4u41vj" path="res://Assets/reloading.png" id="10_7gbtx"]
[ext_resource type="Texture2D" uid="uid://cu17fvv5puhmb" path="res://Assets/perso_chroma_requiem (55) copie 5.png" id="10_dvvgx"]
[ext_resource type="Texture2D" uid="uid://d2628a2bt4kw0" path="res://Assets/perso_chroma_requiem (55) copie 3.png" id="11_p42id"]
[ext_resource type="Texture2D" uid="uid://bhlfqcsjvokem" path="res://Assets/perso_chroma_requiem (55) copie 2.png" id="12_5gadt"]
[ext_resource type="Texture2D" uid="uid://bsi1fl00w7vpc" path="res://Assets/ILF1.png" id="13_7kl0n"]
[ext_resource type="Texture2D" uid="uid://da0rcvn5bqr33" path="res://Assets/ILF2.png" id="14_rvhxl"]
[ext_resource type="Texture2D" uid="uid://bl3jftmpqelb8" path="res://Assets/IRF1.png" id="17_7kl0n"]
[ext_resource type="Texture2D" uid="uid://d4hyxfh2ow37h" path="res://Assets/IRF2.png" id="18_rvhxl"]
[ext_resource type="Texture2D" uid="uid://cwj5bltrunqf3" path="res://Assets/transin.png" id="19_1ilmy"]
[ext_resource type="Texture2D" uid="uid://bdrynjhrgprhl" path="res://Assets/transi1.png" id="19_p42id"]
[ext_resource type="Texture2D" uid="uid://ccncbtx1rxkq0" path="res://Assets/transi2.png" id="20_5gadt"]
[ext_resource type="Texture2D" uid="uid://dw8jppgtq6tnd" path="res://Assets/transin2.png" id="20_dykby"]
[ext_resource type="Texture2D" uid="uid://n3e86gvndypq" path="res://Assets/transin3.png" id="21_dqocq"]
[ext_resource type="Texture2D" uid="uid://cjylhnxcfbkaa" path="res://Assets/transi3.png" id="21_hq7ld"]
[ext_resource type="Texture2D" uid="uid://cphncg57p1biy" path="res://Assets/transi4.png" id="22_bbtkc"]
[ext_resource type="Texture2D" uid="uid://b0nwbgkjsqspc" path="res://Assets/transin4.png" id="22_dkgix"]
[ext_resource type="Texture2D" uid="uid://bbgneqpgf8l05" path="res://Assets/transin5.png" id="23_p8w0b"]
[ext_resource type="Texture2D" uid="uid://c70mp8fa32a78" path="res://Assets/transin6.png" id="24_eor87"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xh4dr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d082v")
}],
"loop": true,
"name": &"atk1_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_7gbtx")
}],
"loop": true,
"name": &"atk1_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_d082v")
}, {
"duration": 1.0,
"texture": ExtResource("7_7gbtx")
}],
"loop": true,
"name": &"idle-right2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_nd58f")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_p42id")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_7kl0n")
}],
"loop": true,
"name": &"jump_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_rvhxl")
}],
"loop": true,
"name": &"jump_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_7gbtx")
}],
"loop": true,
"name": &"reloading",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_rh60s")
}, {
"duration": 1.0,
"texture": ExtResource("10_dvvgx")
}],
"loop": true,
"name": &"run_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_7kl0n")
}, {
"duration": 1.0,
"texture": ExtResource("14_rvhxl")
}],
"loop": true,
"name": &"run_left2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_p42id")
}, {
"duration": 1.0,
"texture": ExtResource("12_5gadt")
}],
"loop": true,
"name": &"run_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_7kl0n")
}, {
"duration": 1.0,
"texture": ExtResource("18_rvhxl")
}],
"loop": true,
"name": &"run_right2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_1ilmy")
}, {
"duration": 1.0,
"texture": ExtResource("20_dykby")
}, {
"duration": 1.0,
"texture": ExtResource("21_dqocq")
}, {
"duration": 1.0,
"texture": ExtResource("22_dkgix")
}, {
"duration": 1.0,
"texture": ExtResource("23_p8w0b")
}, {
"duration": 1.0,
"texture": ExtResource("24_eor87")
}],
"loop": true,
"name": &"transition_to_normal",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_p42id")
}, {
"duration": 1.0,
"texture": ExtResource("20_5gadt")
}, {
"duration": 1.0,
"texture": ExtResource("21_hq7ld")
}, {
"duration": 1.0,
"texture": ExtResource("22_bbtkc")
}],
"loop": true,
"name": &"transition_to_phase1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_bbtkc")
}, {
"duration": 1.0,
"texture": ExtResource("21_hq7ld")
}, {
"duration": 1.0,
"texture": ExtResource("20_5gadt")
}, {
"duration": 1.0,
"texture": ExtResource("19_p42id")
}],
"loop": true,
"name": &"transition_to_phase2",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wpk7j"]
size = Vector2(60, 113)

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(31, -28)
script = ExtResource("1_b0c5b")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1109, -215.813)
scale = Vector2(2.45023, 2.39583)
sprite_frames = SubResource("SpriteFrames_xh4dr")
animation = &"transition_to_normal"
frame_progress = 0.569971
offset = Vector2(-387.769, 192.548)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(169, 246.5)
shape = SubResource("RectangleShape2D_wpk7j")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="TransitionTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="TransitionTimer" to="." method="_on_transition_timer_timeout"]
